--- a/devdays-2025-ai/slides/index.html
+++ b/devdays-2025-ai/slides/index.html
@@ -714,7 +714,9 @@
     // - https://revealjs.com/config/
     Reveal.initialize({
       hash: true,
-      controls: false,
+      controls: true,
+      slideNumber: "h.v",
+      previewLinks: true,
 
       // Learn about plugins: https://revealjs.com/plugins/
       plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
