:memo: update slides

--- a/advanced-graphics/threeJs/slides/index.html
+++ b/advanced-graphics/threeJs/slides/index.html
@@ -58,17 +58,63 @@
         </section>
 
         <section>
-            <h1>Three.js basics</h1>
+            <h2>Three.js basics</h2>
             <ul>
                 <li><p>Scene</p></li>
                 <li><p>Camera</p></li>
                 <li><p>Renderer</p></li>
+                <li><p>Mesh (Geometry, Material)</p></li>
             </ul>
         </section>
 
         <section>
-            <h1>Let's practice!</h1>
+            <h2>Let's practice!</h2>
             <p>Go to the practice folder and follow the readme</p>
+        </section>
+
+        <section>
+            <h2>Animations</h2>
+            <ul>
+                <li><p>Animation loop</p></li>
+                <li><p>Optimization</p></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Debugging / Helpers</h2>
+            <ul>
+                <li><p>OrbitControls</p></li>
+                <li><p>lil-gui</p></li>
+                <li><p>Axis helper</p></li>
+                <li><p>Grid helper</p></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Materials</h2>
+            <ul>
+                <li><p>Lights</p></li>
+                <li><p>Texture</p></li>
+                <li><p>Shaders</p></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>React Three Fiber</h2>
+            <ul>
+                <li><p>Declarative components</p></li>
+                <li><p>Leverage React lifecycle (reactivity, unmounts, ...)</p></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Resources</h2>
+            <ul>
+                <li><a href="https://threejs.org/docs/" target="_blank">Three.js documentation/mentor</a></li>
+                <li><a href="https://threejs.org/manual/#en/fundamentals" target="_blank">Three.js fundamentals</a></li>
+                <li><a href="https://discoverthreejs.com/" target="_blank">Discover three.js book</a></li>
+                <li><a href="https://threejs-journey.com/" target="_blank">Three.js journey course</a></li>
+            </ul>
         </section>
     </div>
 </div>
