--- a/advanced-graphics/threeJs/slides/index.html
+++ b/advanced-graphics/threeJs/slides/index.html
@@ -114,6 +114,8 @@
                 <li><a href="https://threejs.org/manual/#en/fundamentals" target="_blank">Three.js fundamentals</a></li>
                 <li><a href="https://discoverthreejs.com/" target="_blank">Discover three.js book</a></li>
                 <li><a href="https://threejs-journey.com/" target="_blank">Three.js journey course</a></li>
+                <li><a href="https://r3f.docs.pmnd.rs/getting-started/your-first-scene" target="_blank">React three fiber</a></li>
+                <li><a href="https://drei.docs.pmnd.rs/getting-started/introduction" target="_blank">Drei (R3F helpers)</a></li>
             </ul>
         </section>
     </div>
