add shadow level

--- a/advanced-graphics/threeJs/slides/index.html
+++ b/advanced-graphics/threeJs/slides/index.html
@@ -108,6 +108,14 @@
         </section>
 
         <section>
+            <h2>Shadows</h2>
+            <ul>
+                <li><p>Texture shadows</p></li>
+                <li><p>Real shadows (using shadow maps)</p></li>
+            </ul>
+        </section>
+
+        <section>
             <h2>Resources</h2>
             <ul>
                 <li><a href="https://threejs.org/docs/" target="_blank">Three.js documentation/mentor</a></li>
