--- a/advanced-graphics/canvas/slides/index.html
+++ b/advanced-graphics/canvas/slides/index.html
@@ -25,8 +25,13 @@
 <div class="reveal">
     <div class="slides">
         <section>
-            <h1>Canvas</h1>
-            <h2>Introduction</h2>
+            <h1>Intro to canvas</h1>
+            <h2>From zero to confetti</h2>
+        </section>
+
+        <section class="fragment">
+            <h2>What is a "canvas" ?</h2>
+            - an HTML element
         </section>
     </div>
 </div>
